tooling/nargo_cli/tests/snapshots/execution_failure/regression_9856/execute__tests__acir_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
warning: variable does not need to be mutable
  ┌─ src/main.nr:2:13
  │
2 │     let mut e: [(Field, bool); 1] = [((-1), true)];
  │             -
  │

error: Index out of bounds, array has size 2, but index was 4294967297
  ┌─ src/main.nr:3:5
  │
3 │     e[2147483648_u32].1
  │     -----------------
  │
  = Call stack:
    1: main
            at src/main.nr:3:5

Failed to solve program: 'Index out of bounds, array has size 2, but index was 4294967297'
