tooling/nargo_cli/tests/snapshots/execution_failure/regression_9856/execute__tests__brillig_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
warning: variable does not need to be mutable
  ┌─ src/main.nr:2:13
  │
2 │     let mut e: [(Field, bool); 1] = [((-1), true)];
  │             -
  │

error: Assertion failed: Index out of bounds
  ┌─ src/main.nr:3:5
  │
3 │     e[2147483648_u32].1
  │     -----------------
  │
  = Call stack:
    1. src/main.nr:3:5

Failed assertion
