tooling/nargo_cli/tests/snapshots/execution_failure/regression_9856/execute__tests__comptime_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
warning: variable does not need to be mutable
  ┌─ src/main.nr:2:13
  │
2 │     let mut e: [(Field, bool); 1] = [((-1), true)];
  │             -
  │

error: 2147483648 is out of bounds for the array of length 1
  ┌─ src/main.nr:3:5
  │
3 │     e[2147483648_u32].1
  │     -----------------
  │

Error interpreting main function
